# ThinkWatch

./: .env.example  .env.production.example  .gitignore  AUDIT_PLAN.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSING.md  LICENSING.zh-CN.md  Makefile  README.md  README.zh-CN.md  plan.md
.github/workflows/: ci.yml
crates/auth/: Cargo.toml
crates/auth/src/: api_key.rs  jwt.rs  lib.rs  oidc.rs  password.rs  rbac.rs  totp.rs
crates/common/: Cargo.toml
crates/common/src/: audit.rs  cb_registry.rs  clickhouse_client.rs  config.rs  cost_decimal.rs  crypto.rs  db.rs  dynamic_config.rs  errors.rs  lib.rs  retry.rs  validation.rs
crates/common/src/dto/: mod.rs
crates/common/src/limits/: budget.rs  mod.rs  sliding.rs  weight.rs
crates/common/src/models/: api_key.rs  audit_log.rs  log_forwarder.rs  mcp_server.rs  mcp_store.rs  mod.rs  provider.rs  team.rs  usage.rs  user.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: budget_alert.rs  cache.rs  channel.rs  content_filter.rs  cost_tracker.rs  decision_log.rs  failover.rs  health.rs  lib.rs  metadata.rs  metrics_labels.rs  model_mapping.rs  output_guardrails.rs  pii_redactor.rs  prefix_balancer.rs  proxy.rs  quota.rs  rate_limiter.rs  router.rs  sse_parser.rs  strategy.rs  streaming.rs
crates/gateway/src/providers/: anthropic.rs  azure_openai.rs  bedrock.rs  custom.rs  google.rs  mod.rs  openai.rs  traits.rs
crates/mcp-gateway/: Cargo.toml
crates/mcp-gateway/src/: access_control.rs  cache.rs  circuit_breaker.rs  detect.rs  health.rs  lib.rs  pool.rs  proxy.rs  registry.rs  session.rs  user_token.rs
crates/mcp-gateway/src/transport/: streamable_http.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  error.rs  init.rs  lib.rs  main.rs  mcp_runtime.rs  oidc_helpers.rs  openapi.rs  tracing_ch.rs
crates/server/src/handlers/: access_logs.rs  admin.rs  analytics.rs  api_keys.rs  app_logs.rs  audit.rs  auth.rs  chargeback.rs  clickhouse_util.rs  client_errors.rs  cost_forecast.rs  dashboard.rs  gateway_logs.rs  health.rs  limits.rs  limits_bulk.rs  log_forwarders.rs  mcp_logs.rs  mcp_oauth.rs  mcp_servers.rs  mcp_shared.rs  mcp_store.rs  mcp_tools.rs  metrics.rs  mod.rs  models.rs  platform_logs.rs  platform_pricing.rs  providers.rs  roles.rs  roles_yaml.rs  route_observability.rs  scim.rs  serde_util.rs  setup.rs  slo.rs  sso.rs  teams.rs  test_rate_limit.rs  time_range.rs  (+4 more)
crates/server/src/middleware/: access_log.rs  api_key_auth.rs  auth_guard.rs  mod.rs  require_role.rs  verify_signature.rs
crates/server/src/services/: mod.rs  rbac_service.rs  session_service.rs  totp_service.rs  user_repository.rs
crates/server/src/tasks/: api_key_lifecycle.rs  data_retention.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: ch.rs  client.rs  fixtures.rs  lib.rs  mock_provider.rs  pg.rs
crates/test-support/tests/: access_app_logs.rs  admin_user_actions.rs  analytics_clickhouse.rs  api_key_mcp_tools.rs  api_key_rotation.rs  audit_shape.rs  auth.rs  authz_audit.rs  authz_horizontal.rs  authz_vertical.rs  background_tasks.rs  console_admin.rs  content_filter_pii.rs  cost_handlers.rs  dashboard_ws.rs  encryption_roundtrip.rs  forwarder_transports.rs  gateway_failover.rs  gateway_proxy.rs  limits.rs  limits_bulk.rs  limits_override_meta.rs  mcp.rs  mcp_oauth.rs  mcp_protocol.rs  mcp_store_concurrency.rs  mcp_store_e2e.rs  multi_instance_config_sync.rs  multi_provider_proxy.rs  oidc_wizard.rs  openapi_contract.rs  pii_streaming.rs  provider_hot_reload.rs  roles_and_deny.rs  setup_wizard_e2e.rs  signing_key_rotation.rs  smoke.rs  streaming_and_cache.rs  totp_recovery.rs  trace_slo_chargeback.rs  (+2 more)
deploy/: docker-compose.dev.yml  docker-compose.yml  generate-secrets.sh
deploy/clickhouse/: init.sql
deploy/clickhouse/config.d/: optimize.xml
deploy/clickhouse/initdb.d/: 01_init.sql  01_tables.sql  02_index_backfills.sql  03_trace_id_backfill.sql  04_materialized_views.sql  05_cost_rollup.sql
deploy/clickhouse/users.d/: default-profile.xml  default-user.xml
deploy/docker/: Dockerfile.server  Dockerfile.web
deploy/helm/agent-bastion/: values.yaml
deploy/helm/think-watch/: .helmignore  Chart.yaml  README.md  values-production.yaml.example  values.yaml
deploy/quickwit/: audit_logs_index.yaml  gateway_logs_index.yaml  mcp_logs_index.yaml  platform_logs_index.yaml
deploy/redis/: redis.conf
docs/: secret-rotation.md
docs/en/: api-reference.md  architecture.md  configuration.md  deployment-guide.md  security.md
docs/zh-CN/: api-reference.md  architecture.md  configuration.md  deployment-guide.md  security.md
migrations/: 001_init.sql  002_general_and_content_filter_v2.sql  002_limit_overrides.sql  002_mcp_health_interval.sql  002_mcp_last_error.sql  002_routing.sql  002_seed_linear_oauth_template.sql  002_team_rate_limits.sql  003_dashboard_layouts.sql  003_simplify_pricing.sql  003_unified_system_roles.sql  004_api_keys_cost_center.sql  004_drop_models_is_active.sql  004_user_custom_roles_scope.sql  005_api_key_expiry_warning.sql  005_drop_route_price_overrides.sql  005_unified_role_assignments.sql  006_webhook_outbox.sql  007_init_usage_audit.sql  008_init_log_forwarders.sql  009_init_mcp_logs.sql  011_indexes_and_soft_delete.sql  013_indexes_and_constraints.sql  014_platform_enhancements.sql
sdk/: .gitignore  README.md
web/: .gitignore  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
web/e2e/: analytics.spec.ts  api-keys.spec.ts  dashboard.spec.ts  fixtures.ts  log-explorer.spec.ts  login.spec.ts  mcp-servers.spec.ts  mcp-store.spec.ts  roles.spec.ts  route-guards.spec.ts  settings.spec.ts  setup.spec.ts
web/scripts/: check-i18n.mjs
web/src/: App.tsx  index.css  main.tsx  router.tsx
web/src/components/: ErrorBoundary.tsx  command-palette.tsx  compliance-badges.tsx  confirm-dialog.tsx  data-table-pagination.tsx  error-boundary.tsx  header-editor.tsx  require-permission.tsx
web/src/hooks/: use-auth.ts  use-client-pagination.ts  use-intl-format.ts  use-paginated-list.ts  use-sso-status.ts  use-teams.ts  (+2 more)
(+147 files in other folders)
