[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/gateway",
    "crates/mcp-gateway",
    "crates/auth",
    "crates/common",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BUSL-1.1"

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["macros", "ws"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors", "trace", "compression-gzip", "request-id",
    "limit", "timeout", "catch-panic", "sensitive-headers", "set-header",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "rust_decimal"] }
rust_decimal = { version = "1", features = ["serde"] }
clickhouse = { version = "0.13", features = ["time", "chrono"] }

# Redis
fred = { version = "10", features = ["subscriber-client", "i-scripts"] }

# Auth
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
argon2 = "0.5"
openidconnect = { version = "4", features = ["reqwest"] }
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
data-encoding = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (upstream proxy)
reqwest = { version = "0.13", features = ["stream", "json", "rustls"] }
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1"
http-body-util = "0.1"

# Async
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"

# Crypto
aes-gcm = "0.10"
sha2 = "0.11"
sha1 = "0.11"
hmac = "0.13"
rand = "0.10"
hex = "0.4"
subtle = "2"
urlencoding = "2"
url = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }

# Config
dotenvy = "0.15"

# API documentation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# AWS (Bedrock)
# NOTE: "hardcoded-credentials" is the AWS SDK feature name for constructing
# Credentials from explicit access_key/secret_key values (as opposed to the
# default credential chain). This does NOT embed credentials in the binary —
# they are loaded at runtime from encrypted provider config in the database.
aws-sigv4 = "1"
aws-credential-types = { version = "1", features = ["hardcoded-credentials"] }
aws-smithy-eventstream = "0.60"

# Utils
arc-swap = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"

# Workspace crates
think-watch-common = { path = "crates/common" }
think-watch-auth = { path = "crates/auth" }
think-watch-gateway = { path = "crates/gateway" }
think-watch-mcp-gateway = { path = "crates/mcp-gateway" }
