[package]
name = "think-watch-mcp-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
think-watch-common = { workspace = true }
think-watch-auth = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
fred = { workspace = true }
metrics = { workspace = true }
