[package]
name = "think-watch-server"
version.workspace = true
edition.workspace = true

[dependencies]
think-watch-common = { workspace = true }
think-watch-auth = { workspace = true }
think-watch-gateway = { workspace = true }
think-watch-mcp-gateway = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
fred = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }
openidconnect = { workspace = true }
rust_decimal = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
data-encoding = { workspace = true }
subtle = { workspace = true }
url = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
regex = "1"
arc-swap = { workspace = true }
clickhouse = { workspace = true }
