[package]
name = "think-watch-test-support"
version.workspace = true
edition.workspace = true
publish = false

# Test-only crate: provides the `TestApp` harness that boots the full
# server stack (gateway + console) in-process against a freshly-
# created Postgres database, plus a request-signing HTTP client that
# mirrors what the web frontend does. Integration tests live in
# `tests/` here and across other crates that depend on it.

[lib]
path = "src/lib.rs"

[dependencies]
think-watch-server = { path = "../server" }
think-watch-common = { workspace = true }
think-watch-auth = { workspace = true }
think-watch-gateway = { workspace = true }
think-watch-mcp-gateway = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
fred = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
data-encoding = { workspace = true }
p256 = { workspace = true }
ecdsa = { workspace = true }
rand = { workspace = true }
url = { workspace = true }
clickhouse = { workspace = true }
once_cell = "1"
wiremock = "0.6"
futures = { workspace = true }
async-stream = { workspace = true }
bytes = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
